Revise About Me section with new details
Updated the 'About Me' section to include education, current focus, and honors.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
     <h1 class="section-title">About Me</h1>
     <p class="section-subtitle">Robotics • Embedded Systems • Human–Robot Interaction</p>
 
-    <!-- Who I Am -->
+
+    <!-- 1. Who I Am -->
     <div class="section-block">
         <h2><i class="fas fa-user-circle"></i> Who I Am</h2>
         <p>
@@ -46,12 +47,35 @@
             to create friendly, accessible, and reproducible robotic systems for education and research.
         </p>
         <p>
-            I am deeply interested in building small, expressive robots that help motivate students, support learning,
+            I am deeply interested in building expressive micro-robots that motivate students, support learning,
             and bring personality to educational environments through motion and behaviour.
         </p>
     </div>
 
-    <!-- Skills -->
+
+    <!-- 2. Education -->
+    <div class="section-block">
+        <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+        <p><strong>BSc in Science & Technology (Robotics & Bio-Engineering)</strong></p>
+        <p>University of Tartu, Estonia</p>
+    </div>
+
+
+    <!-- 3. Current Focus -->
+    <div class="section-block">
+        <h2><i class="fas fa-lightbulb"></i> Current Focus</h2>
+        <p>
+            Building <strong>Pia-the-μRSC</strong> with improved hardware, CAD redesign, servo optimization,
+            sensor integration, and reproducibility-focused documentation.
+        </p>
+        <p>
+            My long-term goal is to create a portable, robust, and low-cost micro companion-robot platform
+            that students can build, maintain, and extend easily.
+        </p>
+    </div>
+
+
+    <!-- 4. Skills -->
     <div class="section-block">
         <h2><i class="fas fa-screwdriver-wrench"></i> Skills & Tools</h2>
         <ul>
@@ -64,25 +88,29 @@
         </ul>
     </div>
 
-    <!-- Current Focus -->
+
+    <!-- 5. Honors & Awards -->
     <div class="section-block">
-        <h2><i class="fas fa-lightbulb"></i> Current Focus</h2>
-        <p>
-            Building <strong>Pia-the-μRSC</strong> with improved hardware, optimized servo actuation,
-            sensor integration, CAD redesign, and complete reproducibility-focused documentation.
-        </p>
-        <p>
-            My goal is to build a portable, robust, low-cost companion robot that students can build, maintain,
-            and extend easily.
-        </p>
+        <h2><i class="fas fa-award"></i> Honors & Awards</h2>
+
+        <p><strong>IEEE RO-MAN 2025 – The Robot Design Competition</strong><br>
+        Eindhoven, Netherlands — <em>25th–29th August 2025</em></p>
+
+        <ul>
+            <li><i class="fas fa-medal"></i> Awarded <strong>Best Technical Design</strong> for Poster Presentation.</li>
+            <li><i class="fas fa-file-alt"></i> Conference publication:<br>
+                Matevž Zorec, Farnaz Baksh, Ali Badshah,<br>
+                <em>“Say Hi to the RSC (v4.1), the study buddy you (can) build (and fix)!”</em>
+            </li>
+            <li>
+                <a href="https://www.ro-man2025.org/awards" target="_blank" style="color:#7fc6ff;">
+                    <i class="fas fa-external-link-alt"></i> Official Award Link
+                </a>
+            </li>
+        </ul>
+
     </div>
 
-    <!-- Education -->
-    <div class="section-block">
-        <h2><i class="fas fa-graduation-cap"></i> Education</h2>
-        <p><strong>BSc in Science & Technology (Robotics & Bio-Engineering)</strong></p>
-        <p>University of Tartu, Estonia</p>
-    </div>
 
 </main>
 
