--- a/projects.html
+++ b/projects.html
@@ -34,31 +34,66 @@
 
     <div class="project-grid">
 
-        <!-- Pia-the-µRSC -->
-        <article class="project-card">
-            <h2><i class="fas fa-robot"></i> Pia-the-μRSC</h2>
-            <p class="project-tagline">Portable study-companion robot built on Raspberry Pi Pico.</p>
-            <p>
-                I am engineering a highly portable and low-cost μ-version of the
-                Robotic Study Companion (RSC) platform. The work includes full CAD redesign,
-                servo-mechanism optimization, sensor integration, firmware development
-                in MicroPython, and reproducibility-focused documentation.
-            </p>
+<!-- Pia-the-µRSC -->
+<div class="project-card">
 
-            <ul class="project-tags">
-                <li>Raspberry Pi Pico</li>
-                <li>Micro servos</li>
-                <li>CAD redesign</li>
-                <li>Sensor integration</li>
-                <li>3D printing</li>
-            </ul>
+    <!-- CAROUSEL -->
+    <div class="carousel">
+        <div class="slides">
 
-            <p class="project-links">
-                <a href="https://github.com/BadshahAli-Robo/Pia-the-MicroRSC-to-be" target="_blank">
-                    <i class="fab fa-github"></i> GitHub Repo
-                </a>
-            </p>
-        </article>
+            <!-- Radio buttons -->
+            <input type="radio" name="pia" id="pia-1" checked>
+            <input type="radio" name="pia" id="pia-2">
+            <input type="radio" name="pia" id="pia-3">
+
+            <!-- Slide 1 -->
+            <div class="slide s1">
+                <img src="assets/img/pia-1.jpg" alt="Pia-the-μRSC Image 1">
+            </div>
+
+            <!-- Slide 2 -->
+            <div class="slide">
+                <img src="assets/img/pia-2.gif" alt="Pia-the-μRSC Animation">
+            </div>
+
+            <!-- Slide 3 -->
+            <div class="slide">
+                <img src="assets/img/pia-3.jpg" alt="Pia-the-μRSC Image 3">
+            </div>
+        </div>
+
+        <!-- Navigation dots -->
+        <div class="navigation">
+            <label for="pia-1" class="nav-btn"></label>
+            <label for="pia-2" class="nav-btn"></label>
+            <label for="pia-3" class="nav-btn"></label>
+        </div>
+    </div>
+
+    <!-- CARD CONTENT -->
+    <h2><i class="fas fa-robot"></i> Pia-the-μRSC</h2>
+    <p class="project-tagline">Portable micro study-companion robot built on Raspberry Pi Pico.</p>
+    <p>
+        I engineered a highly portable and low-cost μ-version of the Robotic Study Companion (RSC)
+        platform. This includes CAD redesign, servo-mechanism improvements, sensor integration,
+        firmware development, and reproducibility-focused documentation.
+    </p>
+
+    <ul class="project-tags">
+        <li>Raspberry Pi Pico</li>
+        <li>Micro Servos</li>
+        <li>CAD Redesign</li>
+        <li>Firmware (MicroPython)</li>
+        <li>3D Printing</li>
+    </ul>
+
+    <p class="project-links">
+        <a href="https://github.com/BadshahAli-Robo" target="_blank">
+            <i class="fab fa-github"></i> GitHub Repo
+        </a>
+    </p>
+</div>
+
 
         <!-- RSC -->
         <article class="project-card">
